# OUTCRY

./: .gitignore  Anchor.toml  BUILD-PLAN.md  CLAUDE.md  README.md  SECURITY.md  package-lock.json  package.json
app/: next.config.ts  package-lock.json  package.json
app/scripts/: create-badge-tree.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/auction/: AuctionCard.tsx  AuctionStatus.tsx  BidHistory.tsx  BidPanel.tsx  CountdownTimer.tsx  NftImage.tsx
app/src/components/badges/: BadgeCard.tsx  BadgeGrid.tsx
app/src/hooks/: useAuction.ts  useAuctionActions.ts  useAuctionComments.ts  useAuctionLike.ts  useAuctions.ts  useBadges.ts  useBidderDeposit.ts  useFollowStatus.ts  useNftMetadata.ts  useSessionBidding.ts  useTapestryProfile.ts
app/src/lib/: badges.ts  constants.ts  idl.json  magic-router.ts  program.ts  rate-limit.ts  tapestry.ts  utils.ts
app/src/providers/: Providers.tsx  UmiProvider.tsx
presentation/: DEMO-SCRIPT.md  SUBMISSION.md
programs/outcry/: Cargo.toml
programs/outcry/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/outcry/src/instructions/: cancel_auction.rs  claim_refund.rs  close_auction.rs  create_auction.rs  create_session.rs  delegate_auction.rs  deposit.rs  emergency_refund.rs  end_auction.rs  forfeit_auction.rs  mod.rs  place_bid.rs  place_bid_session.rs  settle_auction.rs  start_auction.rs  undelegate_auction.rs
programs/outcry/src/state/: auction.rs
scripts/: emergency-refund.ts  fix-stuck-auction.ts  mint-test-nft.ts  mint-to-wallet.ts
tests/: devnet-e2e.ts  devnet-er-e2e.ts  outcry.ts
(+24 files in other folders)
